--- a/index.html
+++ b/index.html
@@ -76,7 +76,54 @@
                 </div>
             </div>
          </section>
+         <!-- Some Facts -->
+         <section class="Some-Facts">
+            <div class="facts-heading">
+                <h1 class="dark-1">Some Facts</h1>
+                <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration.</p>
+                <div class="card-container">
+                    <div class="fact-card">
+                        <img src="images/icons/ribon.png" alt="">
+                        <h2 class="dark-1">54</h2>
+                        <p class="dark-3">Awards Winnings</p>
+                    </div>
+                    <div class="fact-card">
+                        <img src="images/icons/projects.png" alt="">
+                        <h2 class="dark-1">1458</h2>
+                        <p class="dark-3">Project Finished</p>
+                    </div>
+                    <div class="fact-card">
+                        <img src="images/icons/customers.png" alt="">
+                        <h2 class="dark-1">590</h2>
+                        <p class="dark-3">Clients Worked</p>
+                    </div>
+                    <div class="fact-card">
+                        <img src="images/icons/email.png" alt="">
+                        <h2 class="dark-1">22578</h2>
+                        <p class="dark-3">Email Send</p>
+                    </div>
+                </div>
+            </div>
+         </section>
+         <!-- Sponspors -->
+          <section class="Sponspors">
+            <div class="Sponspors-heading">
+                <h1 class="dark-1">Our Sponspors</h1>
+                <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration.</p>
+                <div class="images-container">
+                    <div> <img src="images/sponsors/spotify.png" alt=""></div>
+                    <div><img src="images/sponsors/amazon.png" alt=""></div>
+                   <div> <img src="images/sponsors/google.png" alt=""></div>
+                   <div> <img src="images/sponsors/telerama.png" alt=""></div>
+                    <div><img src="images/sponsors/figma.png" alt=""></div>
+                </div>
+            </div>
+          </section>
     </main>
-    
+    <footer class="footer">
+        <div class="footer-child">
+            <h3 class="dark-3">All rights reserved copyright@2023 startup landing page design</h3>
+        </div>
+    </footer>
 </body>
 </html>
